# celeri

./: .gitignore  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
api/src/entities/: foods.rs  mod.rs  prelude.rs
app/: biome.json  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
app/src/lib/: api.ts  index.ts
app/src/routes/: +layout.svelte  +page.svelte
