[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
sea-orm = { version = "^2.0.0-rc", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
